--- a/Journal/MainPage.xaml
+++ b/Journal/MainPage.xaml
@@ -1,18 +1,25 @@
 <!-- Copyright (c) Microsoft Corporation and Contributors. -->
 <!-- Licensed under the MIT License. -->
 
-<Window
-    x:Class="Journal.MainWindow"
+<Page
+    x:Class="Journal.MainPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:Journal"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    mc:Ignorable="d">
-
-    <Grid Width="720">
+    mc:Ignorable="d"
+    Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
+    <Grid>
+        <StackPanel HorizontalAlignment="Right">
+            <Button Content="Settings"  
+                    Click="SettingsClick"
+                    HorizontalAlignment="Right"/>
+        </StackPanel>
         <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center">
-
+            <TextBlock x:Name="HeaderText"
+                       HorizontalAlignment="Center"
+                       FontSize="25"/>
             <TextBox x:Name="journalInput"
                      AcceptsReturn="True" 
                      TextWrapping="Wrap"
@@ -23,12 +30,8 @@
                     HorizontalAlignment="Center"/>
             <Button Content="Read Journal"  Click="ReadClick"
                     HorizontalAlignment="Center" Width="200"/>
-            <TextBlock x:Name="greetingOutput"/>
         </StackPanel>
 
 
     </Grid>
-    
-    
-    
-</Window>
+</Page>
